--- a/transititons/styles.css
+++ b/transititons/styles.css
@@ -6,5 +6,13 @@ body {
     width: 100px;
     height: 100px;
     background-color: purple;
-    transition: transform 0.3s ease-in-out
+    border: 1px solid white;
+    transition: opacity 2s, transform 0.5s
+}
+
+@starting-style {
+    .square {
+        opacity: 0;
+        transform: scale(0)
+    }
 }
