--- a/starting-style-demo/styles.css
+++ b/starting-style-demo/styles.css
@@ -1,7 +1,20 @@
+:root {
+    --background-color1: #800080;
+    --background-color2: #ffd700;
+    --background-color3: #272727;
+
+    --main-text-color: #ffffff;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    overflow-x: hidden;
+    background-color: var(--background-color3);
 }
 
 h1 {
@@ -9,6 +22,7 @@ h1 {
     text-align: center;
     transition: 1s;
     padding: 30px;
+    color: var(--main-text-color)
 }
 
 .container {
@@ -20,27 +34,31 @@ h1 {
 .rectangle {
     width: 70%;
     height: 200px;
-    background-color: purple;
+    background-color: var(--background-color1);
     transition: 1s;
 }
 
 .rectangle-1 {
     width: 70%;
     height: 200px;
-    background-color: purple;
+    background-color: var(--background-color1);
     margin-top: 10px;
     display: none;
+    transform: scale(0);
     transition: all 0.5s;
+    transition-behavior: allow-discrete;
 }
 
 .rectangle-1-visible {
     display: block;
+    opacity: 1;
+    transform: scale(1);
 }
 
 .rectangle-2 {
     width: 70%;
     height: 200px;
-    background-image: linear-gradient(purple, yellow);
+    background-color: var(--background-color2);
     margin-top: 10px;
     transition: all 2s;
 }
@@ -52,7 +70,7 @@ h1 {
 .rectangle-3 {
     width: 70%;
     height: 200px;
-    background-image: linear-gradient(yellow, purple);
+    background-image: linear-gradient(var(--background-color2), var(--background-color1));
     margin-top: 10px;
     transition: all 0.5s;
 }
@@ -61,6 +79,30 @@ h1 {
     transform: translateX(1620px);
     width: 0;
     opacity: 0;
+}
+
+.rectangle-4 {
+    width: 70%;
+    height: 200px;
+    background-color: var(--background-color1);
+    margin-top: 10px;
+    transition: all 0.5s;
+}
+
+.rectangle-gold {
+    background-color: gold;
+}
+
+button {
+    width: 200px;
+    margin-top: 10px;
+    padding: 10px;
+    font-size: 20px;
+    transition: 1s;
+    background-color: black;
+    color: var(--main-text-color);
+    border: none;
+    cursor: pointer;
 }
 
 @starting-style {
@@ -90,20 +132,9 @@ h1 {
         transform: translateX(-200px)
     }
 
-}
+    .rectangle-4 {
+        opacity: 0;
+        transform: translateX(200px)
+    }
 
-.rectangle-gold {
-    background-color: gold;
-}
-
-button {
-    width: 200px;
-    margin-top: 10px;
-    padding: 10px;
-    font-size: 20px;
-    transition: 1s;
-    background-color: black;
-    color: white;
-    border: none;
-    cursor: pointer;
 }
