--- a/starting-style-demo/styles.css
+++ b/starting-style-demo/styles.css
@@ -1,6 +1,6 @@
 :root {
     --background-color1: #800080;
-    --background-color2: #ffd700;
+    --background-color2: greenyellow;
     --background-color3: #272727;
 
     --main-text-color: #ffffff;
@@ -90,7 +90,7 @@ h1 {
 }
 
 .rectangle-gold {
-    background-color: gold;
+    background-color: var(--background-color2);
 }
 
 button {
