--- a/animations/styles.css
+++ b/animations/styles.css
@@ -19,16 +19,11 @@ body {
 }
 
 h2 {
-    margin: 60px 20px ;
+    margin: 60px 20px;
     font-size: 60px;
     font-family: fantasy;
     letter-spacing: 20px;
     color: var(--background-color1);
-}
-
-.button-container {
-    display: flex;
-    justify-content: center;
 }
 
 .squares-container {
@@ -41,7 +36,7 @@ h2 {
     margin: 10px;
     background-color: var(--background-color);
     animation-name: move, fade, bounce, changeColor;
-    animation-duration: 1s, 1s, 1s, 4s;
+    animation-duration: 3s, 1s, 2s, 4s;
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
     animation-direction: alternate;
@@ -50,13 +45,13 @@ h2 {
 
 .square:nth-child(2) {
     animation-name: move, fade, bounce, changeColor;
-    animation-duration: 2s, 0.5s, 1s, 0.5s;
+    animation-duration: 5s, 0.5s, 1s, 0.5s;
     position: relative;
 }
 
 .square:nth-child(3) {
     animation-name: move, fade, bounce, changeColor;
-    animation-duration: 3s, 0.7s, 0.5s, 2s;
+    animation-duration: 6s, 0.7s, 0.5s, 2s;
     position: relative;
 
 }
@@ -69,6 +64,16 @@ h2 {
 
 .square.paused {
     animation-play-state: paused;
+}
+
+.button-container,
+.reset-button-container {
+    display: flex;
+    justify-content: center;
+}
+
+.reset-button-container {
+    margin: 70px;
 }
 
 button {
@@ -105,6 +110,7 @@ button:hover {
 
 .color-board {
     max-width: 700px;
+    margin: 0 30px;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -116,6 +122,14 @@ button:hover {
     height: 100px;
     background-color: var(--background-color);
     border: 1px solid black;
+    transition: all 0.5s;
+    transition-behavior: allow-discrete;
+}
+
+.board-square-flip {
+    transform: rotate(45deg);
+    background-color: aquamarine;
+    z-index: 1;
 }
 
 @keyframes move {
@@ -135,11 +149,11 @@ button:hover {
     }
 
     50% {
-        top: 50px
+        top: 25px
     }
 
     100% {
-        top: -100px;
+        top: -50px;
     }
 
 }
