--- a/animations/styles.css
+++ b/animations/styles.css
@@ -1,7 +1,9 @@
 :root {
-    --background-color: greenyellow;
-    --background-color1: teal;
+    --background-color: #adff2f;
+    --background-color1: #008080;
     --background-color2: #a52779;
+    --background-color3: #7fffd4;
+    --background-color4: #1d1d1d;
 
     --font-size: 18px;
 }
@@ -13,7 +15,7 @@
 }
 
 body {
-    background-color: #1d1d1d;
+    background-color: var(--background-color4);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
         Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -121,15 +123,30 @@ button:hover {
     width: 100px;
     height: 100px;
     background-color: var(--background-color);
-    border: 1px solid black;
+    border: 1px solid var(--background-color4);
     transition: all 0.5s;
     transition-behavior: allow-discrete;
+    cursor: pointer;
 }
 
 .board-square-flip {
     transform: rotate(45deg);
-    background-color: aquamarine;
+    background-color: var(--background-color3);
     z-index: 1;
+}
+
+.esphere-container {
+    background-color: var(--background-color4);
+    border: 1px solid var(--background-color);
+    margin: 20px;
+}
+
+.esphere {
+    width: 100px;
+    height: 100px;
+    background: radial-gradient(var(--background-color) 1%, var(--background-color4) 70%);
+    border-radius: 50%;
+    transition: all 1s;
 }
 
 @keyframes move {
