corrected margins on h2 and buttons

--- a/animations/styles.css
+++ b/animations/styles.css
@@ -6,14 +6,17 @@
     --background-color4: #1d1d1d;
     --background-color5: #04b0a2;
 
-    --font-size: 18px;
-    --font-size1: 16px;
+    --font-size: 10px;
+    --font-size1: 18px;
+    --font-size2: 30px;
+    --font-size3: 40px;
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border: 1px solid red;
 }
 
 body {
@@ -25,19 +28,20 @@ body {
 
 h2 {
     margin: 60px 20px;
-    font-size: 60px;
-    font-family: fantasy;
-    letter-spacing: 20px;
+    font-size: px;
+    font-family: "Roboto Condensed", serif;
+    font-size: var(--font-size3);
+    text-align: center;
     color: var(--background-color1);
 }
 
 .squares-container {
-    height: 500px;
+    height: 470px;
 }
 
 .square {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     margin: 20px;
     background-color: var(--background-color);
     animation-name: move, fade, bounce, changeColor;
@@ -75,21 +79,20 @@ h2 {
 .reset-button-container {
     display: flex;
     justify-content: center;
-}
-
-.reset-button-container {
     margin: 70px;
 }
 
+.reset-button-container {}
+
 button {
-    width: 90%;
+    width: 100%;
     padding: 15px;
     border: none;
     background-color: var(--background-color1);
     color: var(--background-color);
     font-size: var(--font-size);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    letter-spacing: 10px;
+    letter-spacing: 5px;
     text-align: center;
     cursor: pointer;
 
@@ -116,10 +119,10 @@ button:hover {
 .color-board {
     max-width: 700px;
     margin: 0 30px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-content: center;
     align-content: center;
-    flex-wrap: wrap;
 }
 
 .board-square {
@@ -154,16 +157,16 @@ button:hover {
 
 .frame {
     display: flex;
-    width: 70%;
-    height: 558px;
-    margin: 100px auto;
+    width: 60%;
+    height: 600px;
+    margin: 60px auto;
     border: 1px solid var(--background-color);
-    perspective: 800px;
+    perspective: 3000px;
 }
 
 .shape {
-    width: 50%;
-    height: 558px;
+    width: 100%;
+    height: 100%;
     background-color: var(--background-color5);
     view-timeline-name: --shape;
     view-timeline-axis: block;
@@ -173,23 +176,18 @@ button:hover {
     animation-fill-mode: both;
 }
 
-.secondary-shape {
-    width: 100px;
-    height: 100px;
-    margin: 0 100px;
-    background-color: var(--background-color2);
-    view-timeline-name: --secondary-shape;
-    view-timeline-axis: block;
-    animation-timeline: --secondary-shape;
-    animation-name: changePerspective;
-    animation-range: entry 25% cover 50%;
-    animation-fill-mode: both;
+.aos-divs-container {
+    width: 70%;
+    margin: 60px auto;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
 }
 
-.next-animation {
-    width: 100%;
-    height: 500px;
-    z-index: 2;
+.shapes {
+    width: 400px;
+    height: 400px;
 }
 
 @keyframes move {
@@ -217,6 +215,7 @@ button:hover {
     }
 
 }
+
 
 @keyframes fade {
     0% {
@@ -252,5 +251,60 @@ button:hover {
     to {
         opacity: 1;
         transform: rotateY(180deg);
+    }
+}
+
+
+
+@media (max-width: 690px) {
+    .frame {
+        height: 500px;
+    }
+}
+
+@media (max-width: 590px) {
+    h2 {
+        font-size: var(--font-size3);
+    }
+
+    .frame {
+        height: 400px;
+    }
+}
+
+@media (max-width: 490px) {
+    .board-square {
+        width: 80px;
+        height: 80px;
+    }
+
+    .frame {
+        height: 400px;
+    }
+
+    button {
+        font-size: var(--font-size);
+    }
+}
+
+@media (max-width: 390px) {
+    .board-square {
+        width: 70px;
+        height: 70px;
+    }
+}
+
+@media (max-width: 290px) {
+    .board-square {
+        width: 50px;
+        height: 50px;
+    }
+
+    button {
+        padding: 5px;
+    }
+
+    h2 {
+        font-size: var(--font-size2);
     }
 }
