--- a/animations/styles.css
+++ b/animations/styles.css
@@ -8,6 +8,7 @@
     --background-color6: #000000;
     --background-color7: #ffffff;
     --background-color8: #1c77ff;
+    --background-color9: #333333;
 
 
     --font-size: 10px;
@@ -48,7 +49,6 @@ h1 {
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
-
 }
 
 nav {
@@ -335,7 +335,7 @@ button:hover {
 .logo b {
     font-family: "Courgette", cursive;
     font-size: var(--neon-font-main);
-    color: #fee;
+    color: var(--background-color7);
     text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em var(--background-color8), 0 0 0.5em var(--background-color8), 0 0 0.1em var(--background-color8), 0 10px 3px var(--background-color6);
 }
 
@@ -373,7 +373,7 @@ button:hover {
     }
 
     79% {
-        color: #333;
+        color: var(--background-color9);
     }
 
     80% {
@@ -387,7 +387,7 @@ button:hover {
     }
 
     82% {
-        color: #333;
+        color: var(--background-color9);
         text-shadow: none;
     }
 
@@ -397,7 +397,7 @@ button:hover {
     }
 
     92% {
-        color: #333;
+        color: var(--background-color9);
         text-shadow: none;
     }
 
@@ -534,7 +534,7 @@ button:hover {
         width: 80%;
     }
 
-    button{
+    button {
         width: 70%;
     }
 }
@@ -557,7 +557,7 @@ button:hover {
 }
 
 @media (max-width: 490px) {
-    
+
     .board-square {
         width: 80px;
         height: 80px;
