--- a/web-api/styles.css
+++ b/web-api/styles.css
@@ -16,6 +16,12 @@ body {
     background-color: gold;
   }
   
+  .square.pause {
+    animation-play-state: paused;
+  }
+  .square.reverse {
+    animation-direction: alternate-reverse;
+  }
   
   @keyframes moveAndRotate {
     0% {
