--- a/animations/styles.css
+++ b/animations/styles.css
@@ -38,22 +38,11 @@ body {
     overflow-x: hidden;
 }
 
-h1 {
-    text-align: center;
-    margin: 70px auto 0;
-    width: 70%;
-    font-family: "Funnel Display", sans-serif;
-    font-size: var(--font-size4);
-    background-image: url(./assets/background-h1\ \(20241122072918\).jpg);
-    background-size: cover;
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-}
-
 nav {
-    position: sticky;
+    position: fixed;
     top: 0;
+    right: 0;
+    left: 0;
     z-index: 2;
     display: flex;
     justify-content: center;
@@ -111,6 +100,43 @@ a:hover {
     color: var(--background-color);
 }
 
+h1 {
+    text-align: center;
+    width: 70%;
+    font-family: "Funnel Display", sans-serif;
+    font-size: var(--font-size4);
+    background-image: url(./assets/background-h1\ \(20241122072918\).jpg);
+    background-size: cover;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+.hero {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 56px;
+    background-color: var(--background-color6);
+    width: 100%;
+    height: 30vh;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+}
+
+.hero::before {
+    content: "";
+    height: 10px;
+    background-color: var(--background-color);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    animation: changeWith 1s linear both;
+}
+
 h2 {
     background-image: linear-gradient(to right, var(--background-color3), var(--background-color1));
     background-size: cover;
@@ -123,7 +149,6 @@ h2 {
     font-size: var(--font-size3);
     text-align: center;
 }
-
 
 /* EVENT DELEGATION */
 
@@ -145,8 +170,8 @@ h2 {
 }
 
 .board-square {
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     background-color: var(--background-color4);
     border: 1px solid var(--background-color);
     transition: all 0.5s;
@@ -173,8 +198,8 @@ h2 {
 }
 
 .aos-div {
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
     background-image: linear-gradient(var(--background-color2), var(--background-color));
 }
 
@@ -205,18 +230,18 @@ h2 {
 /* KEY FRAMES */
 
 .squares-container {
-    height: 470px;
+    height: 370px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
 .square {
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     margin: 20px;
     background-color: var(--background-color);
-    animation-name: move, fade, changeColor;
+    animation-name: move, fadeOut, changeColor;
     animation-duration: 3s, 1s, 2s, 4s;
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
@@ -226,20 +251,20 @@ h2 {
 }
 
 .square:nth-child(2) {
-    animation-name: move, fade, bounce, changeColor;
+    animation-name: move, bounce, changeColor;
     animation-duration: 5s, 0.5s, 1s, 0.5s;
     position: relative;
 }
 
 .square:nth-child(3) {
-    animation-name: move, fade, bounce, changeColor;
+    animation-name: move, bounce, changeColor;
     animation-duration: 6s, 0.7s, 0.5s, 2s;
     position: relative;
 
 }
 
 .square:nth-child(4) {
-    animation-name: move, fade, bounce, changeColor;
+    animation-name: move, bounce, changeColor;
     animation-duration: 4s;
     position: relative;
 }
@@ -251,7 +276,7 @@ h2 {
 .button-container {
     display: flex;
     justify-content: center;
-    padding: 40px;
+    padding: 40px 0 0;
 }
 
 button {
@@ -278,45 +303,51 @@ button:hover {
 
 /* USING PERSPECTIVE AND SCROLL() */
 
-.container {
-    background-color: var(--background-color4);
-    animation: changeBg;
-    animation-timeline: scroll(self);
-}
-
-.background-container {
-    width: 100%;
-    height: 200vh;
-    background-color: var(--background-color4);
-    animation: changeBg;
-    animation-timeline: scroll();
-}
-
 .frame {
-    display: flex;
-    width: 60%;
-    height: 400px;
-    margin: 40px auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas:
+        "a a b"
+        "a a b"
+        "c c c";
+    width: 40vw;
+    height: 70vh;
+    margin: 0 auto;
     border: 1px solid var(--background-color);
     perspective: 5000px;
+    view-timeline: --element-view;
 }
 
-.shape {
+.element1,
+.element2 {
     width: 100%;
     height: 100%;
-    background-color: var(--background-color5);
-    background-image: url(./assets/cave-canem.webp);
-    background-size: contain;
-    background-position: center;
-    background-blend-mode: darken;
-    view-timeline-name: --shape;
-    view-timeline-axis: block;
-    animation-timeline: --shape;
-    animation-name: changePerspective;
-    animation-range: entry 25% cover 40%;
-    animation-fill-mode: both;
 }
 
+.element1 {
+    grid-area: a;
+    background-color: var(--background-color2);
+    animation: ease-in-out both flipSide;
+    animation-timeline: --element-view;
+    animation-range: entry 20% cover 40%;
+}
+
+.element2 {
+    grid-area: b;
+    background-color: var(--background-color8);
+    animation: ease-in-out both flipUp;
+    animation-timeline: --element-view;
+    animation-range: entry 20% cover 40%;
+}
+
+.element3 {
+    grid-area: c;
+    background-color: var(--background-color);
+    animation: ease-in-out both changeWidth;
+    animation-timeline: --element-view;
+    animation-range: entry 50% cover 40%;
+}
 
 /* NEON SIGN */
 
@@ -328,7 +359,6 @@ button:hover {
     min-width: 65%;
     height: 250px;
     margin: auto;
-    /* padding: 200px; */
     user-select: none;
 }
 
@@ -347,66 +377,33 @@ button:hover {
     animation: blink linear infinite 3s;
 }
 
-/* BEFORE AND AFTER */
+/* DRAGABLE HTML ELEMENT */
 
-.before-after-h2 {
+.drag {
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: var(--background-color1);
+}
+
+.card-container {
+    width: 70%;
+    height: 50vh;
+    background-image: url(./assets/vecteezy_abstract-grid-geometric-black-background_51209931.jpg);
+    background-size: cover;
+    background-position: top;
     position: relative;
 }
 
-.before-after-h2::before {
-    content: "";
-    width: 10px;
-    height: 2px;
-    background: linear-gradient(to right, var(--background-color), var(--background-color8));
+.card {
+    width: 80px;
+    height: 80px;
+    background: linear-gradient(to left, var(--background-color8), var(--background-color));
+    /* border-radius: 5px; */
+    cursor: pointer;
     position: absolute;
-    bottom: 0;
+    top: 24px;
+    left: 24px;
 }
-
-@keyframes blink {
-    78% {
-        color: inherit;
-        text-shadow: inherit;
-    }
-
-    79% {
-        color: var(--background-color9);
-    }
-
-    80% {
-
-        text-shadow: none;
-    }
-
-    81% {
-        color: inherit;
-        text-shadow: inherit;
-    }
-
-    82% {
-        color: var(--background-color9);
-        text-shadow: none;
-    }
-
-    83% {
-        color: inherit;
-        text-shadow: inherit;
-    }
-
-    92% {
-        color: var(--background-color9);
-        text-shadow: none;
-    }
-
-    92.5% {
-        color: inherit;
-        text-shadow: inherit;
-    }
-}
-
 
 /* Declaration of keyframes */
 
@@ -436,8 +433,18 @@ button:hover {
 
 }
 
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
 
-@keyframes fade {
+    100% {
+        opacity: 1;
+    }
+}
+
+
+@keyframes fadeOut {
     0% {
         opacity: 1;
     }
@@ -463,14 +470,38 @@ button:hover {
     }
 }
 
-@keyframes changePerspective {
-    from {
-        opacity: 0;
+@keyframes flipSide {
+    0% {
+        transform: rotateY(0deg);
     }
 
-    to {
-        opacity: 1;
+    50% {
+        transform: rotateY(90deg);
+    }
+
+    100% {
         transform: rotateY(180deg);
+    }
+}
+
+@keyframes flipUp {
+    0% {
+        transform: rotateX(0deg);
+    }
+
+    50% {
+        transform: rotateX(90deg);
+    }
+
+    100% {
+        transform: rotateX(180deg);
+    }
+
+}
+
+@keyframes changeWidth {
+    to {
+        width: 100%;
     }
 }
 
@@ -481,7 +512,7 @@ button:hover {
     }
 
     79% {
-        color: #333;
+        color: var(--background-color9);
     }
 
     80% {
@@ -495,7 +526,7 @@ button:hover {
     }
 
     82% {
-        color: #333;
+        color: var(--background-color9);
         text-shadow: none;
     }
 
@@ -505,7 +536,7 @@ button:hover {
     }
 
     92% {
-        color: #333;
+        color: var(--background-color9);
         text-shadow: none;
     }
 
@@ -515,19 +546,18 @@ button:hover {
     }
 }
 
+
 /* Media queries */
+@media (max-width:890px) {
+    .frame {
+        width: 60vw;
+    }
+}
+
 
 @media (max-width: 690px) {
-    /* h2 {
-        padding: 20px;
-    } */
-
     nav {
         position: unset;
-    }
-
-    .frame {
-        height: 500px;
     }
 
     .aos-divs-container {
@@ -537,16 +567,16 @@ button:hover {
     button {
         width: 70%;
     }
+
+    .frame {
+        width: 80vw;
+    }
 }
 
 @media (max-width: 590px) {
 
     h2 {
         font-size: var(--font-size3);
-    }
-
-    .frame {
-        height: 400px;
     }
 
     .aos-div {
@@ -561,10 +591,6 @@ button:hover {
     .board-square {
         width: 80px;
         height: 80px;
-    }
-
-    .frame {
-        height: 400px;
     }
 
     button {
