--- a/web-api/styles.css
+++ b/web-api/styles.css
@@ -1,29 +1,51 @@
 body {
-    background-color: #1d1d1d;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    padding: 0;
-    margin: 0;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  .square {
-    width: 100px;
-    height: 100px;
-    background-color: gold;
-  }
-  
-  .square.pause {
-    animation-play-state: paused;
-  }
-  .square.reverse {
-    animation-direction: alternate-reverse;
-  }
-  
-  @keyframes moveAndRotate {
+  background-color: #1d1d1d;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.square,
+.square1 {
+  width: 100px;
+  height: 100px;
+  background-color: gold;
+  margin-top: 30px;
+}
+
+.square1 {
+  position: absolute;
+}
+
+.background {
+  width: 100%;
+  height: 300px;
+  margin-top: 30px;
+  background-color: aqua;
+}
+
+.line {
+  width: 2px;
+  height: 2px;
+  background-color: aliceblue;
+  margin: 40px;
+}
+
+.square.pause {
+  animation-play-state: paused;
+}
+
+.square.reverse {
+  animation-direction: alternate-reverse;
+}
+
+/* @keyframes moveAndRotate {
     0% {
       transform: translateX(0);
     }
@@ -34,4 +56,4 @@ body {
       transform: translateX(calc(100vw - 100px)) rotate(360deg);
       background-color: crimson;
     }
-  }
+  } */
