--- a/web-api/styles.css
+++ b/web-api/styles.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   margin: 0;
   overflow: hidden;
+  color: white;
 }
 
 * {
@@ -17,6 +18,20 @@ body {
   height: 100px;
   background-color: gold;
   margin-top: 30px;
+}
+
+.controls {
+  margin-top: 40px;
+  padding: 10px;
+}
+
+.controls .section {
+  border: 1px solid;
+  padding: 10px;
+}
+
+.controls .section h3 {
+  margin: 0 0 20px;
 }
 
 .square1 {
@@ -44,16 +59,3 @@ body {
 .square.reverse {
   animation-direction: alternate-reverse;
 }
-
-/* @keyframes moveAndRotate {
-    0% {
-      transform: translateX(0);
-    }
-    80% {
-      background-color: blue;
-    }
-    100% {
-      transform: translateX(calc(100vw - 100px)) rotate(360deg);
-      background-color: crimson;
-    }
-  } */
